--- a/task-4.html
+++ b/task-4.html
@@ -25,6 +25,6 @@
       </label>
       <button type="submit">Log in</button>
     </form>
-    <script type="module" scr="./js/task-4.js"></script>
+    <script scr="./js/task-4.js" type="module"></script>
   </body>
 </html>
