--- a/task-6.html
+++ b/task-6.html
@@ -22,6 +22,6 @@
 
     <div id="boxes"></div>
 
-    <script type="module" src="./js/task-6.js"></script>
+    <script src="./js/task-6.js" type="module"></script>
   </body>
 </html>
